--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -30,8 +30,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: ./alpine/3.10/Dockerfile
           tags: janarj/watchman:alpine-3.10-$WATCHMAN_VERSION
-          builds-args: |
+          build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
 
@@ -57,8 +58,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: ./alpine/3.11/Dockerfile
           tags: janarj/watchman:alpine-3.11-$WATCHMAN_VERSION
-          builds-args: |
+          build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
 
@@ -84,8 +86,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: ./alpine/3.12/Dockerfile
           tags: janarj/watchman:alpine-3.12-$WATCHMAN_VERSION
-          builds-args: |
+          build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
 
@@ -111,6 +114,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: ./alpine/3.13/Dockerfile
           tags: janarj/watchman:alpine-3.13-$WATCHMAN_VERSION
-          builds-args: |
+          build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
