--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -8,8 +8,8 @@ env:
   WATCHMAN_VERSION: "v2021.02.01.00"
 
 jobs:
-  alpine-3-10:
-    name: Build alpine 3.10
+  alpine:
+    name: Build alpine
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,95 +26,56 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push Alpine 3.10
         uses: docker/build-push-action@v2
         with:
           push: true
           file: ./alpine/3.10/Dockerfile
-          tags: "janarj/watchman:alpine-3.10-$WATCHMAN_VERSION"
+          # Will be enabled once Dockerfile configured to build from sources
+          # platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          tags: |
+            janarj/watchman:alpine-3.10-${{ env.WATCHMAN_VERSION }}
+            janarj/watchman:alpine-3.10
           build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
-
-  alpine-3-11:
-    name: Build alpine 3.11
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
+      - name: Build and push Alpine 3.11
         uses: docker/build-push-action@v2
         with:
           push: true
           file: ./alpine/3.11/Dockerfile
-          tags: "janarj/watchman:alpine-3.11-$WATCHMAN_VERSION"
+          # Will be enabled once Dockerfile configured to build from sources
+          # platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          tags: |
+            janarj/watchman:alpine-3.11-${{ env.WATCHMAN_VERSION }}
+            janarj/watchman:alpine-3.11
           build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
-
-  alpine-3-12:
-    name: Build alpine 3.12
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
+      - name: Build and push Alpine 3.12
         uses: docker/build-push-action@v2
         with:
           push: true
           file: ./alpine/3.12/Dockerfile
-          tags: "janarj/watchman:alpine-3.12-$WATCHMAN_VERSION"
+          # Will be enabled once Dockerfile configured to build from sources
+          # platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          tags: |
+            janarj/watchman:alpine-3.12-${{ env.WATCHMAN_VERSION }}
+            janarj/watchman:alpine-3.12
           build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
 
-
-  alpine-3-13:
-    name: Build alpine 3.13
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
+      - name: Build and push alpine 3.13
         uses: docker/build-push-action@v2
         with:
           push: true
           file: ./alpine/3.13/Dockerfile
-          tags: "janarj/watchman:alpine-3.13-$WATCHMAN_VERSION"
+          # Will be enabled once Dockerfile configured to build from sources
+          # platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          tags: |
+            janarj/watchman:alpine-3.13-${{ env.WATCHMAN_VERSION }}
+            janarj/watchman:alpine-3.13
+            janarj/watchman:alpine-${{ env.WATCHMAN_VERSION }}
+            janarj/watchman:alpine
           build-args: |
             WATCHMAN_VERSION=$WATCHMAN_VERSION
