--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -37,7 +37,7 @@ jobs:
             janarj/watchman:alpine-3.10-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:alpine-3.10
           build-args: |
-            WATCHMAN_VERSION=$WATCHMAN_VERSION
+            WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
       - name: Build and push Alpine 3.11
         uses: docker/build-push-action@v2
@@ -50,7 +50,7 @@ jobs:
             janarj/watchman:alpine-3.11-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:alpine-3.11
           build-args: |
-            WATCHMAN_VERSION=$WATCHMAN_VERSION
+            WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
       - name: Build and push Alpine 3.12
         uses: docker/build-push-action@v2
@@ -63,7 +63,7 @@ jobs:
             janarj/watchman:alpine-3.12-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:alpine-3.12
           build-args: |
-            WATCHMAN_VERSION=$WATCHMAN_VERSION
+            WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
       - name: Build and push alpine 3.13
         uses: docker/build-push-action@v2
@@ -78,4 +78,4 @@ jobs:
             janarj/watchman:alpine-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:alpine
           build-args: |
-            WATCHMAN_VERSION=$WATCHMAN_VERSION
+            WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
