--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -8,8 +8,8 @@ env:
   WATCHMAN_VERSION: "v2021.02.01.00"
 
 jobs:
-  alpine:
-    name: Build alpine
+  golang1.14-alpine:
+    name: Golang 1.14 on Alpine
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -62,9 +62,29 @@ jobs:
           tags: |
             janarj/watchman:golang1.14-alpine3.13-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:golang1.14-alpine3.13
+            janarj/watchman:golang1.14-alpine
           build-args: |
             WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
+
+  golang1.14-debian:
+    name: Golang 1.14 on Debian
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
       - name: Build and push Golang 1.14 on Debian Buster
         uses: docker/build-push-action@v2
         with:
@@ -75,6 +95,7 @@ jobs:
           tags: |
             janarj/watchman:golang1.14-buster-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:golang1.14-buster
+            janarj/watchman:golang1.14
           build-args: |
             WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
@@ -93,6 +114,25 @@ jobs:
             WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
 
 
+
+
+  golang1.15-alpine:
+    name: Golang 1.15 on Alpine
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Golang 1.15 on Alpine 3.12
         uses: docker/build-push-action@v2
@@ -117,8 +157,30 @@ jobs:
           tags: |
             janarj/watchman:golang1.15-alpine3.13-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:golang1.15-alpine3.13
+            janarj/watchman:golang1.15-alpine
           build-args: |
             WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
+
+
+
+
+  golang1.15-debian:
+    name: Golang 1.15 on Debian
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Golang 1.15 on Debian Buster
         uses: docker/build-push-action@v2
@@ -130,19 +192,7 @@ jobs:
           tags: |
             janarj/watchman:golang1.15-buster-${{ env.WATCHMAN_VERSION }}
             janarj/watchman:golang1.15-buster
-          build-args: |
-            WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
-
-
-      - name: Build and push Golang 1.15 on Debian Stretch
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          file: ./golang/1.15/stretch/Dockerfile
-          # Will be enabled once Dockerfile configured to build from sources
-          # platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
-          tags: |
-            janarj/watchman:golang1.15-stretch-${{ env.WATCHMAN_VERSION }}
-            janarj/watchman:golang1.15-stretch
+            janarj/watchman:golang1.15
+            janarj/watchman:golang
           build-args: |
             WATCHMAN_VERSION=${{ env.WATCHMAN_VERSION }}
